--- a/shopmanager/shopapp/weixin/templates/weixin/weixinproductsync.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/weixinproductsync.html
@@ -14,24 +14,25 @@
 {% block container %}
 <fieldset style="border:2px solid #E3E3E3">
 <legend><h2>微信商品信息及库存更新表单</h2></legend>
-<div style="height:500px;overflow-y:scroll;" class="well">
-<table class="table table-bordered table-condensed">
+<div style="height:500px;overflow-y:scroll;background-color:white;" class="well">
+<table class="table table-bordered table-hover table-condensed">
 <thead>
 <tr>
     <th class="col-xs-1">序号</th>
     <th class="col-xs-1">商品图片</th>
     <th class="col-xs-2">商品标题</th>
     <th class="col-xs-2">组合商品编码</th>
-    <th class="col-xs-1">规格名称</th>
     <th class="col-xs-1">预购数</th>
     <th class="col-xs-1">剩余数</th>
-    <th class="col-xs-3">架上商品图片</th>
+    <th class="col-xs-1">规格名称</th>
+    <th class="col-xs-1">线上名称</th>
+    <th class="col-xs-2">架上图片</th>
 </tr>
 </thead>
 <tbody>
 {% for product in object.product_list %}
 {% for psku in product.pskus %}
-<tr>
+<tr class="{% cycle 'active' 'success' 'warning' 'info' 'danger' %}">
     {% if forloop.counter == 1 %}
     <td rowspan="{{ product.pskus|length }}">{{ forloop.parentloop.counter }}</td>
     <td rowspan="{{ product.pskus|length }}">
@@ -42,9 +43,10 @@
     <td rowspan="{{ product.pskus|length }}">{{ product.name }}</td>
     {% endif %}
     <td>{{ psku.outer_id }}.{{ product.outer_id }}</td>
-    <td>{{ psku.properties_alias }}</td>
     <td>{{ psku.remain_num }}</td>
     <td>{{ psku.remain_num|sub:psku.wait_post_num }}</td>
+    <td>{{ psku.properties_alias }}</td>
+    <td>{{ psku.wskus.0.sku_name }}</td>
     <td>
         {% for wsku in psku.wskus %}
         <img title="[{{ wsku.product_id }}-{{ wsku.sku_id }}(售价:{{ wsku.sku_price }}) ]" 
