fix dinghuo change the address

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/orderdetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/orderdetail.html
@@ -49,7 +49,7 @@
 
             <div class="col-lg-4">
                 <div class="alert alert-success" role="alert">
-                    <strong>填写地址:</strong>XXXXXXXX_{{ orderlist.id }}
+                    <strong>填写地址:</strong>上海市佘山镇吉业路245号5号楼_{{ orderlist.id }}室
                 </div>
             </div>
 
