--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/orderdetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/orderdetail.html
@@ -1,6 +1,17 @@
 {% extends "dinghuo/dinghuo_base.html" %}
 {% block title %}订单详情页{% endblock %}
 {% block head_script %}
+    <link href='{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css' rel='stylesheet'/>
+    <style type="text/css" title="currentStyle">
+        @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
+        @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css";
+    </style>
+    <style type="text/css">
+        tfoot input {
+            width: 50%;
+        }
+    </style>
+
     <script type="text/javascript">
         function changestatus(id, button) {
 
@@ -91,14 +102,15 @@
         </div>
         <div class="row">
             <table id="orderdetailtable" border="1" class="table table-striped table-bordered table-hover">
-                <tr>
-                    <td width="100px">商品编码</td>
-                    <td width="100px">商品名称</td>
-                    <td width="100px">规格</td>
-                    <td width="100px">数量</td>
-                    <td width="100px">买入价格</td>
-                    <td width="100px">单项价格</td>
-                </tr>
+                <thead>
+                <td width="100px">商品编码</td>
+                <td width="100px">商品名称</td>
+                <td width="100px">规格</td>
+                <td width="100px">数量</td>
+                <td width="100px">买入价格</td>
+                <td width="100px">单项价格</td>
+                </thead>
+                <tbody>
                 {% for order in orderdetails %}
                     <tr id="draft_{{ forloop.counter }}">
                         <td>{{ order.outer_id }}</td>
@@ -111,38 +123,41 @@
                         <td>¥{{ order.total_price }}</td>
                     </tr>
                 {% endfor %}
+                </tbody>
             </table>
         </div>
-        <div class="row">
-
-            <div align="center">
-                <nav>
-                    <ul class="pagination">
-                        {% if orderdetails.has_previous %}
-                            <li>
-                                <a href="?page={{ orderdetails.previous_page_number }}" aria-label="Previous">
-                                    <span aria-hidden="true">&laquo;</span>
-                                </a>
-                            </li>
-                        {% endif %}
-                        {% for i in num_page %}
-                            {% if orderdetails.number == i %}
-                                <li class="active"><a href="?page={{ i }}">{{ i }} <span
-                                        class="sr-only">(current)</span></a></li>
-                            {% else %}
-                                <li><a href="?page={{ i }}">{{ i }}</a></li>
-                            {% endif %}
-                        {% endfor %}
-                        {% if orderdetails.has_next %}
-                            <li>
-                                <a href="?page={{ orderdetails.next_page_number }}" aria-label="Next">
-                                    <span aria-hidden="true">&raquo;</span>
-                                </a>
-                            </li>
-                        {% endif %}
-                    </ul>
-                </nav>
-            </div>
-        </div>
     </div>
+{% endblock %}
+{% block tail_script %}
+    <script src="{{ STATIC_URL }}jquery/jquery-2.1.1.min.js"></script>
+    <script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $('#orderdetailtable').dataTable({
+            //"bJQueryUI": true,
+            "bAutoWidth": false, //自适应宽度
+            "aaSorting": [[1, "asc"]],
+            "iDisplayLength": 50,
+            "aLengthMenu": [[20, 50, 100, -1], [20, 50, 100, "All"]],
+            //"bInfo":true,
+            //"sPaginationType": "full_numbers",
+            //"sDom": '<"H"Tfr>t<"F"ip>',
+            "oLanguage": {
+                "sLengthMenu": "每页 _MENU_ 条",
+                "sZeroRecords": "抱歉， 没有找到",
+                "sInfo": "从 _START_ 到 _END_ /共 _TOTAL_ 条",
+                "sInfoEmpty": "没有数据",
+                "sSearch": "搜索",
+                "sInfoFiltered": "(从 _MAX_ 条数据中检索)",
+                "oPaginate": {
+                    "sFirst": "首页",
+                    "sPrevious": "前一页",
+                    "sNext": "后一页",
+                    "sLast": "尾页"
+                },
+                "sZeroRecords": "没有检索到数据",
+                "sProcessing": "<img src='/static/img/loading.gif' />"
+            }
+        });
+
+    </script>
 {% endblock %}
