fix flashsale click rebeta

--- a/shopmanager/flashsale/xiaolumm/templates/mama_cashout.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_cashout.html
@@ -13,6 +13,9 @@
     tfoot input{
     	width:50%;
     }
+    #id-carry-list .table{
+    	font-size:12px;
+    }
 </style>
 {% endblock %}
 
@@ -31,7 +34,7 @@
   <h5>我的补贴记录：</h5>
     <table class="table table-bordered" style="margin-top:10px">
       <thead>
-		<tr><th class="col-xs-3">时间</th><th class="col-xs-3">类型</th><th class="col-xs-3">金额</th><th class="col-xs-3">状态</th></tr>
+		<tr><th class="col-xs-3">时间</th><th class="col-xs-3">金额</th><th class="col-xs-3">类型</th><th class="col-xs-3">状态</th></tr>
       </thead>
       <tbody id="id-carry-tbody">
       </tbody>
