--- a/shopmanager/templates/admin/index.html
+++ b/shopmanager/templates/admin/index.html
@@ -52,7 +52,7 @@
                 <th scope="row"><a href="/trades/order/statistic/">成交商品分析</a></th>
             </tr>
             <tr>
-                <th scope="row"><a href="/items/product/sale/">商品库存分析</a></th>
+                <th scope="row"><a href="/items/product/sale/">商品销量分析</a></th>
             </tr>
             <tr>
                 <th scope="row"><a href="/trades/related/orders/">关联商品销售分析</a></th>
