fix flashsale mmexam

--- a/shopmanager/flashsale/mmexam/templates/index.html
+++ b/shopmanager/flashsale/mmexam/templates/index.html
@@ -35,7 +35,7 @@
 <div  style="margin-left:25px">
 
   <img 
-      src="{{ STATIC_URL }}img/mmlogo.jpg"
+      src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvod8esoMLkQr7v4N8zrsCqFMibwQgwSQZB6DKpf67FYJevsib8tJSXsU7T7qah490dPgZmjnppIa2g/0?wx_fmt=jpeg"
       class="img-responsive img-circle"
       alt="Cinque Terre"
       width="304"
