--- a/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
@@ -45,7 +45,8 @@
     <li class="list-group-item">专属链接： <b>http://xiaolu.so/m/{{ pk }}/</b></li>
     <li class="list-group-item">推荐人数： {{ referal_num }}（<a href="/m/cashout/">详情</a>）</li>
     <li class="list-group-item">点击人数： {{ click_num }}</li>
-    <li class="list-group-item"><span style="color:orange">点击补贴： {{ click_num }} * {{ click_price }} = ￥{{ click_pay }}</span>（培训通过后生效）</li>
+    <li class="list-group-item"><span style="color:orange">点击补贴： {{ click_num }} * {{ click_price }} = ￥{{ click_pay }}</span>
+    {% if not exam_pass %}（<a href="/sale/exam/">考试通过后生效</a>）{% endif %}</li>
     <li class="list-group-item"><span style="color:orange">订单人数： {{ order_num }}</span></li>
     <li class="list-group-item"><span style="color:orange">订单金额： ￥{{ total_value }}</span></li>
     {% if agencylevel.pk > 1 %}
@@ -57,7 +58,6 @@
     {% endif %}
   </ul>
 
-
   <h3>订单详情</h3>
   <table id="state_table" class="table table-bordered">
     <thead>
@@ -65,11 +65,10 @@
     </thead>
     <tbody>
       {% for order in order_list %}
-      <tr><td>{{ order.wxordernick }}</td><td>{{ order.order_cash }}</td><td>{{ order.shoptime }}</td><td>已付款</td></tr>
+      <tr><td>{{ order.wxordernick }}</td><td>{{ order.order_cash }}</td><td>{{ order.shoptime|date:"H:i" }}</td><td>已付款</td></tr>
       {% endfor %}
     </tbody>
   </table>
-
 
 </div>
 
