--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailystats.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailystats.html
@@ -1,21 +1,32 @@
 {% extends "dinghuo/dinghuo_base.html" %}
 {% block title %}每日大货统计{% endblock %}
 {% block head_script %}
+    <link href='{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css' rel='stylesheet'/>
+    <style type="text/css" title="currentStyle">
+        @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
+        @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css";
+    </style>
+    <style type="text/css">
+        tfoot input {
+            width: 50%;
+        }
+    </style>
 {% endblock %}
 {% block container %}
     <div class="container" style="margin-top: 40px">
+
         <div class="row">
-            <div class="col-xs-8"><strong>小鹿美美每日订货报告</strong></div>
-            <div class="col-xs-4"><strong>负责人：肖阳</strong></div>
+            <div class="col-xs-8"><h3>小鹿美美每日订货报告</h3></div>
+            <div class="col-xs-4"><h3>负责人：肖阳</h3></div>
         </div>
 
-
+<hr>
         <div class="row">
             <div class="col-xs-4">
                 <a href="/sale/dinghuo/daily/?day={{ prev_day }}"><< 前一天</a>
             </div>
             <div class="col-xs-4">
-                <p>{{ target_date }}</p>
+                <p><h4>{{ target_date }}</h4></p>
             </div>
             <div class="col-xs-4">
                 {% if next_day %}
@@ -23,51 +34,87 @@
                 {% endif %}
             </div>
         </div>
+
         <div class="row">
-            <table class="table table-bordered">
+            <table id="mytable" class="table table-bordered">
                 <thead>
-                <th>大货单号</th>
-                <th>产品详细内容</th>
+                <th width="100px">大货单号</th>
+                <th>
+                <div class="row">
+                    <div class="col-xs-6">名称</div>
+                    <div class="col-xs-3">数量</div>
+                    <div class="col-xs-3">总价</div>
+                </div>
+                </th>
                 <th>负责人</th>
                 <th>操作</th>
-                <th>发货</th>
-                <th>快递单号</th>
                 </thead>
                 {% for orderlists_list in orderlists_lists %}
+
                     <tr>
-                        <td>{{ orderlists_list.id }}</td>
                         <td>
-                            <table class="table">
-                                <thead>
-                                <th>商品id</th>
-                                <th>名称</th>
-                                <th>数量</th>
-                                <th>总价</th>
-                                </thead>
-                                <tbody>
-                                {% for orderdetail in orderlists_list.orderdetail %}
-                                    <tr>
-                                        <td>{{ orderdetail.outer_id_p }}</td>
-                                        <td>{{ orderdetail.product_name }}</td>
-                                        <td>{{ orderdetail.quantity }}</td>
-                                        <td>{{ orderdetail.price }}</td>
-                                    </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
+                            <label class="label label-warning" style="font-size: 20px">{{ orderlists_list.id }}</label>
+                            <label class="label label-info">{{ orderlists_list.status }}状态</label>
+                        </td>
+
+                        <td>
+
+                            {% for orderdetail in orderlists_list.orderdetail %}
+                                <div class="row" style="margin:-5px;">
+                                    <div class="col-xs-6">{{ orderdetail.product_name }}</div>
+                                    <div class="col-xs-3">{{ orderdetail.quantity }}</div>
+                                    <div class="col-xs-3">{{ orderdetail.price }}</div>
+                                </div>
+                                <hr>
+                            {% endfor %}
+
                         </td>
                         <td>
                             {{ orderlists_list.buyer_name }}
                         </td>
-                        <td width="100px"><label class="label label-info">当前状态:{{ orderlists_list.status }}</label>
-                            <a class="btn  btn-success" style="margin-top: 10px"  title="查看详情" href="/sale/dinghuo/detail/{{ orderlists_list.id }}" target="_blank">  查看详情</a>
+                        <td width="100px">
+                            <a class="btn  btn-success" style="margin-top: 10px" title="查看详情"
+                               href="/sale/dinghuo/detail/{{ orderlists_list.id }}" target="_blank"> 查看详情</a>
                             <button id="shenhe" class="btn btn-primary" style="margin-top: 10px">改为审核</button>
                         </td>
-                        <td width="100px"><input type="text" class="form-control" style="width: 100px"></td>
-                        <td width="100px"><input type="text" class="form-control" style="width: 100px"></td>
                     </tr>
                 {% endfor %}
             </table>
         </div>
+
     </div>
+{% endblock %}
+
+{% block tail_script %}
+    <script src="{{ STATIC_URL }}jquery/jquery-2.1.1.min.js"></script>
+    <script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+
+        $('#mytable').dataTable({
+            //"bJQueryUI": true,
+            "bAutoWidth": false, //自适应宽度
+            "aaSorting": [[1, "asc"]],
+            "iDisplayLength": -1,
+            "aLengthMenu": [[1, 5, 10, -1], [1, 5, 10, "All"]],
+            //"bInfo":true,
+            //"sPaginationType": "full_numbers",
+            //"sDom": '<"H"Tfr>t<"F"ip>',
+            "oLanguage": {
+                "sLengthMenu": "每页 _MENU_ 条",
+                "sZeroRecords": "抱歉， 没有找到",
+                "sInfo": "从 _START_ 到 _END_ /共 _TOTAL_ 条",
+                "sInfoEmpty": "没有数据",
+                "sSearch": "搜索",
+                "sInfoFiltered": "(从 _MAX_ 条数据中检索)",
+                "oPaginate": {
+                    "sFirst": "首页",
+                    "sPrevious": "前一页",
+                    "sNext": "后一页",
+                    "sLast": "尾页"
+                },
+                "sZeroRecords": "没有检索到数据",
+                "sProcessing": "<img src='/static/img/loading.gif' />"
+            }
+        });
+    </script>
 {% endblock %}
