--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailystats.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailystats.html
@@ -11,6 +11,34 @@
             width: 50%;
         }
     </style>
+    <script src="{{ STATIC_URL }}layer-v1.9.2/layer/layer.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+        });
+        function showlayer(url) {
+            url = '/sale/dinghuo/detaillayer/' + url;
+            layer.open({
+                type: 2,
+                title: '大货详情页',
+                shadeClose: true,
+                shade: 0.8,
+                maxmin: true,
+                area: ['1000px', '600px'],
+                content: url
+            });
+        }
+
+        function changestatus(id, button) {
+            var url = "/sale/dinghuo/changestatus/";
+            var data = {"orderid": id, "func": button.value};
+            var callback = function (res) {
+                if (res == "OK") {
+                }
+            };
+            $.ajax({url: url, data: data, type: "post", success: callback});
+
+        }
+    </script>
 {% endblock %}
 {% block container %}
     <div class="container" style="margin-top: 40px">
@@ -20,7 +48,7 @@
             <div class="col-xs-4"><h3>负责人：肖阳</h3></div>
         </div>
 
-<hr>
+        <hr>
         <div class="row">
             <div class="col-xs-4">
                 <a href="/sale/dinghuo/daily/?day={{ prev_day }}"><< 前一天</a>
@@ -40,11 +68,11 @@
                 <thead>
                 <th width="100px">大货单号</th>
                 <th>
-                <div class="row">
-                    <div class="col-xs-6">名称</div>
-                    <div class="col-xs-3">数量</div>
-                    <div class="col-xs-3">总价</div>
-                </div>
+                    <div class="row">
+                        <div class="col-xs-6">名称</div>
+                        <div class="col-xs-3">数量</div>
+                        <div class="col-xs-3">总价</div>
+                    </div>
                 </th>
                 <th>负责人</th>
                 <th>操作</th>
@@ -73,9 +101,11 @@
                             {{ orderlists_list.buyer_name }}
                         </td>
                         <td width="100px">
-                            <a class="btn  btn-success" style="margin-top: 10px" title="查看详情"
-                               href="/sale/dinghuo/detail/{{ orderlists_list.id }}" target="_blank"> 查看详情</a>
-                            <button id="shenhe" class="btn btn-primary" style="margin-top: 10px">改为审核</button>
+                            <a id="detaillayer" onclick="showlayer({{ orderlists_list.id }})" class="btn  btn-success"
+                               style="margin-top: 10px" title="查看详情"> 查看详情</a>
+                            <button onclick="changestatus({{ orderlists_list.id }},this)" class="btn btn-primary"
+                                    style="margin-top: 10px" id="shenhebutton" value="审核">改为审核
+                            </button>
                         </td>
                     </tr>
                 {% endfor %}
